# VARCOM-get-reports

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yaml  integration_test.yaml  monthly_review.yaml  sonarcloud.yml
R_preprocess_database/: preprocess.R
docs/: CONTRIBUTIONS.md  maintenance.md  review_species_json_description.md
get_reports/: VARCOM-get-reports.code-workspace  continuation_record.py  create_review_document.py  ebird_api_access.py  ebird_data_access.py  get_ebird_api_key.py  get_from_database.py  get_records_to_review.py  get_reports.py  get_review_rules.py  get_state_list.py  get_taxonomy.py
get_reports/data/: varcom_review_species.json
integration_test/: create_report.sh  doc2text.py  generate_review_information.sh
junit/: test-results.xml
tests/: test_continuation_record.py  test_create_review_document.py  test_doc2text.py  test_ebird_api_access.py  test_ebird_data_access.py  test_get_ebird_api_key.py  test_get_records_to_review.py  test_get_reports.py  test_get_review_rules.py  test_get_state_list.py  test_get_taxonomy.py
